Fixed extra padding

--- a/scss/_components.row.scss
+++ b/scss/_components.row.scss
@@ -6,15 +6,14 @@
 
 .c-row {
     position: relative;
+    background-color: palette(color-neutral, xxxxx-light);
+    z-index: 10;
     @include padding-lr($columns-gutter,$columns-gutter);
     @include padding-tb($alpha-leading * 2,$alpha-leading * 1);
-    background-color: palette(color-neutral, xxxxx-light);
 
-    @include mq(90em) {
-        padding: 0;
+    @include mq(bp3) {
+        @include padding-lr($columns-gutter * 2,$columns-gutter * 2);
     }
-
-    z-index: 10;
 }
 
 .c-row--lg {
